Service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: unit-converter-frontend
  name: unit-converter-frontend-svc
spec:
  ports:
    - name: http-port
      port: 4200
      protocol: TCP
      targetPort: 4200
  selector:
    app: unit-converter-frontend
  sessionAffinity: None
  type: NodePort
